passed BIDS error abort test

--- a/manifest.json
+++ b/manifest.json
@@ -7,15 +7,15 @@
   "maintainer": "Flywheel <support@flywheel.io>",
   "source": "https://github.com/flywheel-apps/bids-mriqc",
   "url": "https://mriqc.readthedocs.io/en/stable/about.html",
-  "version": "0.1.6_0.15.1",
+  "version": "0.1.9_0.15.1",
   "custom": {
-    "docker-image": "flywheel/bids-mriqc:0.1.6_0.15.1"
+    "docker-image": "flywheel/bids-mriqc:0.1.9_0.15.1"
   },
   "license": "BSD-3-Clause",
   "custom": {
     "gear-builder": {
       "category": "analysis",
-      "image": "flywheel/bids-mriqc:0.1.6_0.15.1"
+      "image": "flywheel/bids-mriqc:0.1.9_0.15.1"
     }
   },
   "inputs": {
@@ -74,7 +74,7 @@
     "verbose-reports": {
       "description": "increase verbosity of report",
       "type": "boolean",
-      "default": false
+      "default": true
     },
     "write-graph": {
       "description": "Write workflow graph",
@@ -115,7 +115,7 @@
         "vv",
         "vvv"
       ],
-      "optional": true
+      "default": "vv"
     },
     "webapi-url": {
       "description": "IP address where the MRIQC WebAPI is listening",
