--- a/manifest.json
+++ b/manifest.json
@@ -1,246 +1,227 @@
 {
-  "name": "bids-mriqc",
-  "label": "BIDS-APP: MRIQC: Automatic prediction of quality and visual reporting of MRI scans in BIDS format",
-  "description": "MRIQC (v0.15.1) extracts no-reference IQMs (image quality metrics) from structural (T1w and T2w) and functional MRI (magnetic resonance imaging) data.",
-  "author": "Poldrack Lab, Stanford University",
-  "cite": "Esteban O, Birman D, Schaer M, Koyejo OO, Poldrack RA, Gorgolewski KJ; MRIQC: Advancing the Automatic Prediction of Image Quality in MRI from Unseen Sites; PLOS ONE 12(9):e0184661; doi:10.1371/journal.pone.0184661.. FOR MORE INFORMATION SEE: https://mriqc.readthedocs.io/en/stable/about.html.",
-  "maintainer": "Flywheel <support@flywheel.io>",
-  "source": "https://github.com/flywheel-apps/bids-mriqc",
-  "url": "https://mriqc.readthedocs.io/en/stable/about.html",
-  "version": "0.1.11_0.15.1",
-  "license": "BSD-3-Clause",
-  "custom": {
-    "gear-builder": {
-      "category": "analysis",
-      "image": "flywheel/bids-mriqc:0.1.11_0.15.1"
-    }
-  },
-  "inputs": {
-    "key": {
-      "base": "api-key",
-      "read-only": true
-    }
-  },
-  "config": {
-    "log_level": {
-      "default": "INFO",
-      "description": "Gear Log verbosity level (ERROR|WARNING|INFO|DEBUG)",
-      "type": "string"
-    },
-    "run-bids-validation": {
-      "description": "Run BIDS validation before mriqc",
-      "type": "boolean",
-      "default": true
-    },
-    "abort-on-bids-error": {
-      "description": "Will not run mriqc if there are any BIDS errors detected",
-      "type": "boolean",
-      "default": false
-    },
-    "participant_label": {
-      "description": "PARTICIPANT_LABEL [PARTICIPANT_LABEL ...]]",
-      "type": "string",
-      "optional": true
-    },
-    "run-id": {
-      "description": "[RUN_ID [RUN_ID ...]]",
-      "type": "string",
-      "optional": true
-    },
-    "task-id": {
-      "description": "[TASK_ID [TASK_ID ...]]",
-      "type": "string",
-      "optional": true
-    },
-    "modalities": {
-      "description": "{T1w,bold,T2w} [{T1w,bold,T2w} ...]",
-      "type": "string",
-      "enum": [
-        "",
-        "T1w",
-        "bold",
-        "T2w"
-      ],
-      "optional": true
-    },
-    "dsname": {
-      "description": "a dataset name",
-      "type": "string",
-      "optional": true
-    },
-    "work-dir": {
-      "description": "change the folder to store intermediate results",
-      "type": "string",
-      "optional": true
-    },
-    "verbose-reports": {
-      "description": "increase verbosity of report",
-      "type": "boolean",
-      "default": true
-    },
-    "write-graph": {
-      "description": "Write workflow graph",
-      "type": "boolean",
-      "default": false
-    },
-    "dry-run": {
-      "description": "Do not run the workflow",
-      "type": "boolean",
-      "default": false
-    },
-    "profile": {
-      "description": "hook up the resource profiler callback to nipype",
-      "type": "boolean",
-      "default": false
-    },
-    "use-plugin": {
-      "description": "nipype plugin configuration file",
-      "type": "string",
-      "optional": true
-    },
-    "no-sub": {
-      "description": "Turn off submission of anonymized quality metrics to MRIQC’s metrics repository",
-      "type": "boolean",
-      "optional": true
-    },
-    "email": {
-      "description": "Email address to include with quality metric submission",
-      "type": "string",
-      "optional": true
-    },
-    "verbose": {
-      "description": "increases mriqc log verbosity for each occurence, debug level is -vvv",
-      "type": "string",
-      "enum": [
-        "",
-        "v",
-        "vv",
-        "vvv"
-      ],
-      "default": "v"
-    },
-    "webapi-url": {
-      "description": "IP address where the MRIQC WebAPI is listening",
-      "type": "string",
-      "optional": true
-    },
-    "webapi-port": {
-      "description": "port where the MRIQC WebAPI is listening",
-      "type": "string",
-      "optional": true
-    },
-    "upload-strict": {
-      "description": "upload will fail if if upload is strict",
-      "type": "boolean",
-      "default": false
-    },
-    "n_procs": {
-      "description": "number of threads",
-      "type": "integer",
-      "default": 1
-    },
-    "mem_gb": {
-      "description": "available total memory",
-      "type": "integer",
-      "default": 0
-    },
-    "testing": {
-      "description": "use testing settings for a minimal footprint",
-      "type": "boolean",
-      "default": false
-    },
-    "float32": {
-      "description": "Cast the input data to float32 if it’s represented in higher precision (saves space and improves perfomance)",
-      "type": "boolean",
-      "default": false
-    },
-    "ica": {
-      "description": "Run ICA on the raw data and include the componentsin the individual reports (slow but potentially very insightful)",
-      "type": "boolean",
-      "default": false
-    },
-    "hmc-afni": {
-      "description": "Use ANFI 3dvolreg for head motion correction (HMC) - default",
-      "type": "boolean",
-      "default": true
-    },
-    "hmc-fsl": {
-      "description": "Use FSL MCFLIRT instead of AFNI for head motion correction (HMC)",
-      "type": "boolean",
-      "default": false
-    },
-    "fft-spikes-detector": {
-      "description": "Turn on FFT based spike detector (slow)",
-      "type": "boolean",
-      "default": false
-    },
-    "fd_thres": {
-      "description": "motion threshold for FD computation",
-      "type": "number",
-      "default": 0.2
-    },
-    "ants-nthreads": {
-      "description": "number of threads that will be set in ANTs processes",
-      "type": "integer",
-      "default": 1
-    },
-    "ants-float": {
-      "description": "number of threads that will be set in ANTs processes",
-      "type": "boolean",
-      "default": false
-    },
-    "ants-settings": {
-      "description": "path to JSON file with settings for ANTS",
-      "type": "string",
-      "optional": true
-    },
-    "deoblique": {
-      "description": "Deoblique the functional scans during head motion correction preprocessing",
-      "type": "boolean",
-      "default": false
-    },
-    "despike": {
-      "description": "Despike the functional scans during head motion correction preprocessing",
-      "type": "boolean",
-      "default": false
-    },
-    "start-idx": {
-      "description": "Initial volume in functional timeseries that should be considered for preprocessing",
-      "type": "integer",
-      "optional": true
-    },
-    "stop-idx": {
-      "description": "Final volume in functional timeseries that should be considered for preprocessing",
-      "type": "integer",
-      "optional": true
-    },
-    "correct-slice-timing": {
-      "description": "Perform slice timing correction",
-      "type": "boolean",
-      "default": false
-    }
-  },
-        "environment": {
-                "AFNI_IMSAVE_WARNINGS": "NO",
-                "AFNI_MODELPATH": "/opt/afni/models",
-                "AFNI_PLUGINPATH": "/opt/afni/plugins",
-                "AFNI_TTATLAS_DATASET": "/opt/afni/atlases",
-                "ANTSPATH": "/usr/lib/ants",
-                "CPATH": "/usr/local/miniconda/include/:",
-                "FSLDIR": "/usr/share/fsl/5.0",
-                "FSLMULTIFILEQUIT": "TRUE",
-                "FSLOUTPUTTYPE": "NIFTI_GZ",
-                "FSLTCLSH": "/usr/bin/tclsh",
-                "FSLWISH": "/usr/bin/wish",
-                "HOME": "/home/bidsapp",
-                "LANG": "C.UTF-8",
-                "LC_ALL": "C.UTF-8",
-                "LD_LIBRARY_PATH": "/usr/lib/fsl/5.0:",
-                "MKL_NUM_THREADS": "1",
-                "OMP_NUM_THREADS": "1",
-                "PATH": "/usr/local/miniconda/bin:/opt/afni:/usr/lib/ants:/usr/lib/fsl/5.0:/usr/lib/afni/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin",
-                "POSSUMDIR": "/usr/share/fsl/5.0",
-                "PYTHONNOUSERSITE": "1",
-                "TEMPLATEFLOW_HOME": "/opt/templateflow"
-        }
+	"name": "bids-mriqc",
+	"label": "BIDS-APP: MRIQC: Automatic prediction of quality and visual reporting of MRI scans in BIDS format",
+	"description": "MRIQC (v0.15.1) extracts no-reference IQMs (image quality metrics) from structural (T1w and T2w) and functional MRI (magnetic resonance imaging) data.",
+	"version": "0.1.19_0.15.1",
+	"custom": {
+		"docker-image": "flywheel/bids-mriqc:0.1.19_0.15.1",
+		"gear-builder": {
+			"category": "analysis",
+			"image": "flywheel/bids-mriqc:0.1.19_0.15.1"
+		}
+	},
+	"inputs": {
+		"key": {
+			"base": "api-key",
+			"read-only": true
+		}
+	},
+	"config": {
+		"ants-float": {
+			"default": false,
+			"description": "number of threads that will be set in ANTs processes",
+			"type": "boolean"
+		},
+		"ants-nthreads": {
+			"default": 1,
+			"description": "number of threads that will be set in ANTs processes",
+			"type": "integer"
+		},
+		"ants-settings": {
+			"description": "path to JSON file with settings for ANTS",
+			"optional": true,
+			"type": "string"
+		},
+		"correct-slice-timing": {
+			"default": false,
+			"description": "Perform slice timing correction",
+			"type": "boolean"
+		},
+		"deoblique": {
+			"default": false,
+			"description": "Deoblique the functional scans during head motion correction preprocessing",
+			"type": "boolean"
+		},
+		"despike": {
+			"default": false,
+			"description": "Despike the functional scans during head motion correction preprocessing",
+			"type": "boolean"
+		},
+		"dry-run": {
+			"default": false,
+			"description": "Do not run the workflow",
+			"type": "boolean"
+		},
+		"email": {
+			"description": "Email address to include with quality metric submission",
+			"optional": true,
+			"type": "string"
+		},
+		"fd_thres": {
+			"default": 0.2,
+			"description": "motion threshold for FD computation",
+			"type": "number"
+		},
+		"fft-spikes-detector": {
+			"default": false,
+			"description": "Turn on FFT based spike detector (slow)",
+			"type": "boolean"
+		},
+		"float32": {
+			"default": false,
+			"description": "Cast the input data to float32 if it’s represented in higher precision (saves space and improves perfomance)",
+			"type": "boolean"
+		},
+		"gear-abort-on-bids-error": {
+			"default": false,
+			"description": "Gear will not run mriqc if there are any BIDS errors detected",
+			"type": "boolean"
+		},
+		"gear-log-level": {
+			"default": "INFO",
+			"description": "Gear Log verbosity level (ERROR|WARNING|INFO|DEBUG)",
+			"type": "string"
+		},
+		"gear-run-bids-validation": {
+			"default": true,
+			"description": "Gear will run BIDS validation before mriqc",
+			"type": "boolean"
+		},
+		"gear-save-all-output": {
+			"default": false,
+			"description": "Gear will save ALL intermediate output into mriqc_work.zip",
+			"type": "boolean"
+		},
+		"hmc-afni": {
+			"default": true,
+			"description": "Use ANFI 3dvolreg for head motion correction (HMC) - default",
+			"type": "boolean"
+		},
+		"hmc-fsl": {
+			"default": false,
+			"description": "Use FSL MCFLIRT instead of AFNI for head motion correction (HMC)",
+			"type": "boolean"
+		},
+		"ica": {
+			"default": false,
+			"description": "Run ICA on the raw data and include the componentsin the individual reports (slow but potentially very insightful)",
+			"type": "boolean"
+		},
+		"mem_gb": {
+			"default": 0,
+			"description": "available total memory",
+			"type": "integer"
+		},
+		"modalities": {
+			"description": "{T1w,bold,T2w} [{T1w,bold,T2w} ...]",
+			"enum": [
+				"",
+				"T1w",
+				"bold",
+				"T2w"
+			],
+			"optional": true,
+			"type": "string"
+		},
+		"n_procs": {
+			"default": 1,
+			"description": "number of threads",
+			"type": "integer"
+		},
+		"no-sub": {
+			"description": "Turn off submission of anonymized quality metrics to MRIQC’s metrics repository",
+			"optional": true,
+			"type": "boolean"
+		},
+		"participant_label": {
+			"description": "PARTICIPANT_LABEL [PARTICIPANT_LABEL ...]]",
+			"optional": true,
+			"type": "string"
+		},
+		"profile": {
+			"default": false,
+			"description": "hook up the resource profiler callback to nipype",
+			"type": "boolean"
+		},
+		"run-id": {
+			"description": "[RUN_ID [RUN_ID ...]]",
+			"optional": true,
+			"type": "string"
+		},
+		"start-idx": {
+			"description": "Initial volume in functional timeseries that should be considered for preprocessing",
+			"optional": true,
+			"type": "integer"
+		},
+		"stop-idx": {
+			"description": "Final volume in functional timeseries that should be considered for preprocessing",
+			"optional": true,
+			"type": "integer"
+		},
+		"task-id": {
+			"description": "[TASK_ID [TASK_ID ...]]",
+			"optional": true,
+			"type": "string"
+		},
+		"verbose": {
+			"default": "v",
+			"description": "increases mriqc log verbosity for each occurence, debug level is -vvv",
+			"enum": [
+				"",
+				"v",
+				"vv",
+				"vvv"
+			],
+			"type": "string"
+		},
+		"verbose-reports": {
+			"default": true,
+			"description": "increase verbosity of report",
+			"type": "boolean"
+		},
+		"webapi-port": {
+			"description": "port where the MRIQC WebAPI is listening",
+			"optional": true,
+			"type": "string"
+		},
+		"webapi-url": {
+			"description": "IP address where the MRIQC WebAPI is listening",
+			"optional": true,
+			"type": "string"
+		},
+		"write-graph": {
+			"default": false,
+			"description": "Write workflow graph",
+			"type": "boolean"
+		}
+	},
+	"environment": {
+		"AFNI_IMSAVE_WARNINGS": "NO",
+		"AFNI_MODELPATH": "/opt/afni/models",
+		"AFNI_PLUGINPATH": "/opt/afni/plugins",
+		"AFNI_TTATLAS_DATASET": "/opt/afni/atlases",
+		"ANTSPATH": "/usr/lib/ants",
+		"CPATH": "/usr/local/miniconda/include/:",
+		"FSLDIR": "/usr/share/fsl/5.0",
+		"FSLMULTIFILEQUIT": "TRUE",
+		"FSLOUTPUTTYPE": "NIFTI_GZ",
+		"FSLTCLSH": "/usr/bin/tclsh",
+		"FSLWISH": "/usr/bin/wish",
+		"HOME": "/home/bidsapp",
+		"LANG": "C.UTF-8",
+		"LC_ALL": "C.UTF-8",
+		"LD_LIBRARY_PATH": "/usr/lib/fsl/5.0:",
+		"MKL_NUM_THREADS": "1",
+		"OMP_NUM_THREADS": "1",
+		"PATH": "/usr/local/miniconda/bin:/opt/afni:/usr/lib/ants:/usr/lib/fsl/5.0:/usr/lib/afni/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin",
+		"POSSUMDIR": "/usr/share/fsl/5.0",
+		"PYTHONNOUSERSITE": "1",
+		"TEMPLATEFLOW_HOME": "/opt/templateflow"
+	},
+	"author": "Poldrack Lab, Stanford University",
+	"maintainer": "Flywheel \u003csupport@flywheel.io\u003e",
+	"cite": "Esteban O, Birman D, Schaer M, Koyejo OO, Poldrack RA, Gorgolewski KJ; MRIQC: Advancing the Automatic Prediction of Image Quality in MRI from Unseen Sites; PLOS ONE 12(9):e0184661; doi:10.1371/journal.pone.0184661.. FOR MORE INFORMATION SEE: https://mriqc.readthedocs.io/en/stable/about.html.",
+	"license": "BSD-3-Clause",
+	"source": "https://github.com/flywheel-apps/bids-mriqc",
+	"url": "https://mriqc.readthedocs.io/en/stable/about.html"
 }
