--- a/manifest.json
+++ b/manifest.json
@@ -2,12 +2,12 @@
 	"name": "bids-mriqc",
 	"label": "BIDS-APP: MRIQC: Automatic prediction of quality and visual reporting of MRI scans in BIDS format",
 	"description": "MRIQC (v0.15.1) extracts no-reference IQMs (image quality metrics) from structural (T1w and T2w) and functional MRI (magnetic resonance imaging) data.",
-	"version": "0.1.19_0.15.1",
+	"version": "0.1.20_0.15.1",
 	"custom": {
-		"docker-image": "flywheel/bids-mriqc:0.1.19_0.15.1",
+		"docker-image": "flywheel/bids-mriqc:0.1.20_0.15.1",
 		"gear-builder": {
 			"category": "analysis",
-			"image": "flywheel/bids-mriqc:0.1.19_0.15.1"
+			"image": "flywheel/bids-mriqc:0.1.20_0.15.1"
 		}
 	},
 	"inputs": {
@@ -19,7 +19,7 @@
 	"config": {
 		"ants-float": {
 			"default": false,
-			"description": "number of threads that will be set in ANTs processes",
+			"description": "use float number precision on ANTs computations",
 			"type": "boolean"
 		},
 		"ants-nthreads": {
@@ -220,7 +220,7 @@
 	},
 	"author": "Poldrack Lab, Stanford University",
 	"maintainer": "Flywheel \u003csupport@flywheel.io\u003e",
-	"cite": "Esteban O, Birman D, Schaer M, Koyejo OO, Poldrack RA, Gorgolewski KJ; MRIQC: Advancing the Automatic Prediction of Image Quality in MRI from Unseen Sites; PLOS ONE 12(9):e0184661; doi:10.1371/journal.pone.0184661.. FOR MORE INFORMATION SEE: https://mriqc.readthedocs.io/en/stable/about.html.",
+	"cite": "Esteban O, Birman D, Schaer M, Koyejo OO, Poldrack RA, Gorgolewski KJ; MRIQC: Advancing the Automatic Prediction of Image Quality in MRI from Unseen Sites; PLOS ONE 12(9):e0184661; doi:10.1371/journal.pone.0184661.",
 	"license": "BSD-3-Clause",
 	"source": "https://github.com/flywheel-apps/bids-mriqc",
 	"url": "https://mriqc.readthedocs.io/en/stable/about.html"
