--- a/manifest.json
+++ b/manifest.json
@@ -2,12 +2,12 @@
 	"name": "bids-mriqc",
 	"label": "BIDS-APP: MRIQC: Automatic prediction of quality and visual reporting of MRI scans in BIDS format",
 	"description": "MRIQC (v0.15.1) extracts no-reference IQMs (image quality metrics) from structural (T1w and T2w) and functional MRI (magnetic resonance imaging) data.",
-	"version": "0.1.20_0.15.1",
+	"version": "0.1.21_0.15.1",
 	"custom": {
-		"docker-image": "flywheel/bids-mriqc:0.1.20_0.15.1",
+		"docker-image": "flywheel/bids-mriqc:0.1.21_0.15.1",
 		"gear-builder": {
 			"category": "analysis",
-			"image": "flywheel/bids-mriqc:0.1.20_0.15.1"
+			"image": "flywheel/bids-mriqc:0.1.21_0.15.1"
 		}
 	},
 	"inputs": {
@@ -87,9 +87,14 @@
 			"description": "Gear will run BIDS validation before mriqc",
 			"type": "boolean"
 		},
-		"gear-save-all-output": {
+		"gear-save-intermediate-work": {
 			"default": false,
 			"description": "Gear will save ALL intermediate output into mriqc_work.zip",
+			"type": "boolean"
+		},
+		"gear-zip-html": {
+			"default": false,
+			"description": "Gear will save each html file as a zip archive for easy on-platform viewing",
 			"type": "boolean"
 		},
 		"hmc-afni": {
