--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,15 @@
 {
 	"name": "bids-mriqc",
-	"label": "BIDS-APP: MRIQC: Automatic prediction of quality and visual reporting of MRI scans in BIDS format",
+	"label": "MRIQC: Automatic prediction of quality and visual reporting of MRI scans in BIDS format",
 	"description": "MRIQC (v0.15.1) extracts no-reference IQMs (image quality metrics) from structural (T1w and T2w) and functional MRI (magnetic resonance imaging) data.",
-	"version": "0.1.21_0.15.1",
+	"version": "0.1.23_0.15.1",
 	"custom": {
-		"docker-image": "flywheel/bids-mriqc:0.1.21_0.15.1",
+		"docker-image": "flywheel/bids-mriqc:0.1.23_0.15.1",
 		"gear-builder": {
 			"category": "analysis",
-			"image": "flywheel/bids-mriqc:0.1.21_0.15.1"
-		}
+			"image": "flywheel/bids-mriqc:0.1.23_0.15.1"
+		},
+		"flywheel": {"suite": "BIDS Apps"}
 	},
 	"inputs": {
 		"key": {
@@ -80,11 +81,17 @@
 		"gear-log-level": {
 			"default": "INFO",
 			"description": "Gear Log verbosity level (ERROR|WARNING|INFO|DEBUG)",
-			"type": "string"
+			"type": "string",
+			"enum": [
+				"ERROR",
+				"WARNING",
+				"INFO",
+				"DEBUG"
+			]
 		},
 		"gear-run-bids-validation": {
 			"default": true,
-			"description": "Gear will run BIDS validation before mriqc",
+			"description": "Gear will run BIDS validation before mriqc.  If validation fails and gear-abort-on-bids-error is true, mriq will NOT be run.",
 			"type": "boolean"
 		},
 		"gear-save-intermediate-work": {
@@ -114,16 +121,19 @@
 		},
 		"mem_gb": {
 			"default": 0,
-			"description": "available total memory",
+			"description": "Memory to use (default is 90% of total available)",
 			"type": "integer"
 		},
 		"modalities": {
-			"description": "{T1w,bold,T2w} [{T1w,bold,T2w} ...]",
+			"description": "{T1w,bold,T2w} [{T1w,bold,T2w} ...] Default is all three",
 			"enum": [
 				"",
 				"T1w",
 				"bold",
-				"T2w"
+				"T2w",
+				"T1w bold",
+				"T1w T2w",
+				"bold T2w"
 			],
 			"optional": true,
 			"type": "string"
@@ -138,18 +148,13 @@
 			"optional": true,
 			"type": "boolean"
 		},
-		"participant_label": {
-			"description": "PARTICIPANT_LABEL [PARTICIPANT_LABEL ...]]",
-			"optional": true,
-			"type": "string"
-		},
 		"profile": {
 			"default": false,
 			"description": "hook up the resource profiler callback to nipype",
 			"type": "boolean"
 		},
 		"run-id": {
-			"description": "[RUN_ID [RUN_ID ...]]",
+			"description": "[RUN_ID [RUN_ID ...]] filter input dataset by run id (only integer run ids are valid)",
 			"optional": true,
 			"type": "string"
 		},
@@ -164,7 +169,7 @@
 			"type": "integer"
 		},
 		"task-id": {
-			"description": "[TASK_ID [TASK_ID ...]]",
+			"description": "[TASK_ID [TASK_ID ...]] filter input dataset by task id",
 			"optional": true,
 			"type": "string"
 		},
