--- a/manifest.json
+++ b/manifest.json
@@ -1,237 +1,260 @@
 {
-	"name": "bids-mriqc",
-	"label": "MRIQC: Automatic prediction of quality and visual reporting of MRI scans in BIDS format",
-	"description": "MRIQC (v0.15.1) extracts no-reference IQMs (image quality metrics) from structural (T1w and T2w) and functional MRI (magnetic resonance imaging) data.",
-	"version": "1.0.0_0.15.1",
-	"custom": {
-		"docker-image": "flywheel/bids-mriqc:1.0.0_0.15.1",
-		"gear-builder": {
-			"category": "analysis",
-			"image": "flywheel/bids-mriqc:1.0.0_0.15.1"
-		},
-		"flywheel": {"suite": "BIDS Apps"}
-	},
-	"inputs": {
-		"key": {
-			"base": "api-key",
-			"read-only": true
-		}
-	},
-	"config": {
-		"ants-float": {
-			"default": false,
-			"description": "use float number precision on ANTs computations",
-			"type": "boolean"
-		},
-		"ants-nthreads": {
-			"default": 1,
-			"description": "number of threads that will be set in ANTs processes",
-			"type": "integer"
-		},
-		"ants-settings": {
-			"description": "path to JSON file with settings for ANTS",
-			"optional": true,
-			"type": "string"
-		},
-		"correct-slice-timing": {
-			"default": false,
-			"description": "Perform slice timing correction",
-			"type": "boolean"
-		},
-		"deoblique": {
-			"default": false,
-			"description": "Deoblique the functional scans during head motion correction preprocessing",
-			"type": "boolean"
-		},
-		"despike": {
-			"default": false,
-			"description": "Despike the functional scans during head motion correction preprocessing",
-			"type": "boolean"
-		},
-		"dry-run": {
-			"default": false,
-			"description": "Do not run the workflow",
-			"type": "boolean"
-		},
-		"email": {
-			"description": "Email address to include with quality metric submission",
-			"optional": true,
-			"type": "string"
-		},
-		"fd_thres": {
-			"default": 0.2,
-			"description": "motion threshold for FD computation",
-			"type": "number"
-		},
-		"fft-spikes-detector": {
-			"default": false,
-			"description": "Turn on FFT based spike detector (slow)",
-			"type": "boolean"
-		},
-		"float32": {
-			"default": false,
-			"description": "Cast the input data to float32 if it’s represented in higher precision (saves space and improves perfomance)",
-			"type": "boolean"
-		},
-		"gear-abort-on-bids-error": {
-			"default": false,
-			"description": "Gear will not run mriqc if there are any BIDS errors detected",
-			"type": "boolean"
-		},
-		"gear-log-level": {
-			"default": "INFO",
-			"description": "Gear Log verbosity level (ERROR|WARNING|INFO|DEBUG)",
-			"type": "string",
-			"enum": [
-				"ERROR",
-				"WARNING",
-				"INFO",
-				"DEBUG"
-			]
-		},
-		"gear-run-bids-validation": {
-			"default": true,
-			"description": "Gear will run BIDS validation before mriqc.  If validation fails and gear-abort-on-bids-error is true, mriq will NOT be run.",
-			"type": "boolean"
-		},
-		"gear-save-intermediate-work": {
-			"default": false,
-			"description": "Gear will save ALL intermediate output into mriqc_work.zip",
-			"type": "boolean"
-		},
-		"gear-zip-html": {
-			"default": false,
-			"description": "Gear will save each html file as a zip archive for easy on-platform viewing",
-			"type": "boolean"
-		},
-		"hmc-afni": {
-			"default": true,
-			"description": "Use ANFI 3dvolreg for head motion correction (HMC) - default",
-			"type": "boolean"
-		},
-		"hmc-fsl": {
-			"default": false,
-			"description": "Use FSL MCFLIRT instead of AFNI for head motion correction (HMC)",
-			"type": "boolean"
-		},
-		"ica": {
-			"default": false,
-			"description": "Run ICA on the raw data and include the componentsin the individual reports (slow but potentially very insightful)",
-			"type": "boolean"
-		},
-		"mem_gb": {
-			"default": 0,
-			"description": "Memory to use (default is 90% of total available)",
-			"type": "integer"
-		},
-		"modalities": {
-			"description": "{T1w,bold,T2w} [{T1w,bold,T2w} ...] Default is all three",
-			"enum": [
-				"",
-				"T1w",
-				"bold",
-				"T2w",
-				"T1w bold",
-				"T1w T2w",
-				"bold T2w"
-			],
-			"optional": true,
-			"type": "string"
-		},
-		"n_procs": {
-			"default": 1,
-			"description": "number of threads",
-			"type": "integer"
-		},
-		"no-sub": {
-			"description": "Turn off submission of anonymized quality metrics to MRIQC’s metrics repository",
-			"optional": true,
-			"type": "boolean"
-		},
-		"profile": {
-			"default": false,
-			"description": "hook up the resource profiler callback to nipype",
-			"type": "boolean"
-		},
-		"run-id": {
-			"description": "[RUN_ID [RUN_ID ...]] filter input dataset by run id (only integer run ids are valid)",
-			"optional": true,
-			"type": "string"
-		},
-		"start-idx": {
-			"description": "Initial volume in functional timeseries that should be considered for preprocessing",
-			"optional": true,
-			"type": "integer"
-		},
-		"stop-idx": {
-			"description": "Final volume in functional timeseries that should be considered for preprocessing",
-			"optional": true,
-			"type": "integer"
-		},
-		"task-id": {
-			"description": "[TASK_ID [TASK_ID ...]] filter input dataset by task id",
-			"optional": true,
-			"type": "string"
-		},
-		"verbose": {
-			"default": "v",
-			"description": "increases mriqc log verbosity for each occurence, debug level is -vvv",
-			"enum": [
-				"",
-				"v",
-				"vv",
-				"vvv"
-			],
-			"type": "string"
-		},
-		"verbose-reports": {
-			"default": true,
-			"description": "increase verbosity of report",
-			"type": "boolean"
-		},
-		"webapi-port": {
-			"description": "port where the MRIQC WebAPI is listening",
-			"optional": true,
-			"type": "string"
-		},
-		"webapi-url": {
-			"description": "IP address where the MRIQC WebAPI is listening",
-			"optional": true,
-			"type": "string"
-		},
-		"write-graph": {
-			"default": false,
-			"description": "Write workflow graph",
-			"type": "boolean"
-		}
-	},
-	"environment": {
-		"AFNI_IMSAVE_WARNINGS": "NO",
-		"AFNI_MODELPATH": "/opt/afni/models",
-		"AFNI_PLUGINPATH": "/opt/afni/plugins",
-		"AFNI_TTATLAS_DATASET": "/opt/afni/atlases",
-		"ANTSPATH": "/usr/lib/ants",
-		"CPATH": "/usr/local/miniconda/include/:",
-		"FSLDIR": "/usr/share/fsl/5.0",
-		"FSLMULTIFILEQUIT": "TRUE",
-		"FSLOUTPUTTYPE": "NIFTI_GZ",
-		"FSLTCLSH": "/usr/bin/tclsh",
-		"FSLWISH": "/usr/bin/wish",
-		"HOME": "/home/bidsapp",
-		"LANG": "C.UTF-8",
-		"LC_ALL": "C.UTF-8",
-		"LD_LIBRARY_PATH": "/usr/lib/fsl/5.0:",
-		"MKL_NUM_THREADS": "1",
-		"OMP_NUM_THREADS": "1",
-		"PATH": "/usr/local/miniconda/bin:/opt/afni:/usr/lib/ants:/usr/lib/fsl/5.0:/usr/lib/afni/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin",
-		"POSSUMDIR": "/usr/share/fsl/5.0",
-		"PYTHONNOUSERSITE": "1",
-		"TEMPLATEFLOW_HOME": "/opt/templateflow"
-	},
-	"author": "Poldrack Lab, Stanford University",
-	"maintainer": "Flywheel \u003csupport@flywheel.io\u003e",
-	"cite": "Esteban O, Birman D, Schaer M, Koyejo OO, Poldrack RA, Gorgolewski KJ; MRIQC: Advancing the Automatic Prediction of Image Quality in MRI from Unseen Sites; PLOS ONE 12(9):e0184661; doi:10.1371/journal.pone.0184661.",
-	"license": "BSD-3-Clause",
-	"source": "https://github.com/flywheel-apps/bids-mriqc",
-	"url": "https://mriqc.readthedocs.io/en/stable/about.html"
+  "name": "bids-mriqc",
+  "label": "MRIQC: Automatic prediction of quality and visual reporting of MRI scans in BIDS format",
+  "description": "MRIQC (v0.15.1) extracts no-reference IQMs (image quality metrics) from structural (T1w and T2w) and functional MRI (magnetic resonance imaging) data.",
+  "version": "1.0.0_0.15.1",
+  "custom": {
+    "docker-image": "flywheel/bids-mriqc:1.0.0_0.15.1",
+    "gear-builder": {
+      "category": "analysis",
+      "image": "flywheel/bids-mriqc:1.0.0_0.15.1"
+    },
+    "flywheel": {
+      "suite": "BIDS Apps"
+    },
+    "license": {
+      "non-commercial-use-only": true,
+      "main": {
+        "name": "BSD-3-Clause",
+        "url": "https://github.com/poldracklab/mriqc/blob/0.15.1/LICENSE.txt"
+      },
+      "dependencies": [
+        {
+          "name": "Other",
+          "url": "https://fsl.fmrib.ox.ac.uk/fsl/fslwiki/Licence"
+        },
+        {
+          "name": "Other",
+          "url": "https://github.com/ANTsX/ANTs/blob/v2.2.0/COPYING.txt"
+        },
+        {
+          "name": "Other",
+          "url": "https://afni.nimh.nih.gov/pub/dist/doc/program_help/README.copyright.html"
+        }
+      ]
+    }
+  },
+  "inputs": {
+    "key": {
+      "base": "api-key",
+      "read-only": true
+    }
+  },
+  "config": {
+    "ants-float": {
+      "default": false,
+      "description": "use float number precision on ANTs computations",
+      "type": "boolean"
+    },
+    "ants-nthreads": {
+      "default": 1,
+      "description": "number of threads that will be set in ANTs processes",
+      "type": "integer"
+    },
+    "ants-settings": {
+      "description": "path to JSON file with settings for ANTS",
+      "optional": true,
+      "type": "string"
+    },
+    "correct-slice-timing": {
+      "default": false,
+      "description": "Perform slice timing correction",
+      "type": "boolean"
+    },
+    "deoblique": {
+      "default": false,
+      "description": "Deoblique the functional scans during head motion correction preprocessing",
+      "type": "boolean"
+    },
+    "despike": {
+      "default": false,
+      "description": "Despike the functional scans during head motion correction preprocessing",
+      "type": "boolean"
+    },
+    "dry-run": {
+      "default": false,
+      "description": "Do not run the workflow",
+      "type": "boolean"
+    },
+    "email": {
+      "description": "Email address to include with quality metric submission",
+      "optional": true,
+      "type": "string"
+    },
+    "fd_thres": {
+      "default": 0.2,
+      "description": "motion threshold for FD computation",
+      "type": "number"
+    },
+    "fft-spikes-detector": {
+      "default": false,
+      "description": "Turn on FFT based spike detector (slow)",
+      "type": "boolean"
+    },
+    "float32": {
+      "default": false,
+      "description": "Cast the input data to float32 if it’s represented in higher precision (saves space and improves perfomance)",
+      "type": "boolean"
+    },
+    "gear-abort-on-bids-error": {
+      "default": false,
+      "description": "Gear will not run mriqc if there are any BIDS errors detected",
+      "type": "boolean"
+    },
+    "gear-log-level": {
+      "default": "INFO",
+      "description": "Gear Log verbosity level (ERROR|WARNING|INFO|DEBUG)",
+      "type": "string",
+      "enum": [
+        "ERROR",
+        "WARNING",
+        "INFO",
+        "DEBUG"
+      ]
+    },
+    "gear-run-bids-validation": {
+      "default": true,
+      "description": "Gear will run BIDS validation before mriqc.  If validation fails and gear-abort-on-bids-error is true, mriq will NOT be run.",
+      "type": "boolean"
+    },
+    "gear-save-intermediate-work": {
+      "default": false,
+      "description": "Gear will save ALL intermediate output into mriqc_work.zip",
+      "type": "boolean"
+    },
+    "gear-zip-html": {
+      "default": false,
+      "description": "Gear will save each html file as a zip archive for easy on-platform viewing",
+      "type": "boolean"
+    },
+    "hmc-afni": {
+      "default": true,
+      "description": "Use ANFI 3dvolreg for head motion correction (HMC) - default",
+      "type": "boolean"
+    },
+    "hmc-fsl": {
+      "default": false,
+      "description": "Use FSL MCFLIRT instead of AFNI for head motion correction (HMC)",
+      "type": "boolean"
+    },
+    "ica": {
+      "default": false,
+      "description": "Run ICA on the raw data and include the componentsin the individual reports (slow but potentially very insightful)",
+      "type": "boolean"
+    },
+    "mem_gb": {
+      "default": 0,
+      "description": "Memory to use (default is 90% of total available)",
+      "type": "integer"
+    },
+    "modalities": {
+      "description": "{T1w,bold,T2w} [{T1w,bold,T2w} ...] Default is all three",
+      "enum": [
+        "",
+        "T1w",
+        "bold",
+        "T2w",
+        "T1w bold",
+        "T1w T2w",
+        "bold T2w"
+      ],
+      "optional": true,
+      "type": "string"
+    },
+    "n_procs": {
+      "default": 1,
+      "description": "number of threads",
+      "type": "integer"
+    },
+    "no-sub": {
+      "description": "Turn off submission of anonymized quality metrics to MRIQC’s metrics repository",
+      "optional": true,
+      "type": "boolean"
+    },
+    "profile": {
+      "default": false,
+      "description": "hook up the resource profiler callback to nipype",
+      "type": "boolean"
+    },
+    "run-id": {
+      "description": "[RUN_ID [RUN_ID ...]] filter input dataset by run id (only integer run ids are valid)",
+      "optional": true,
+      "type": "string"
+    },
+    "start-idx": {
+      "description": "Initial volume in functional timeseries that should be considered for preprocessing",
+      "optional": true,
+      "type": "integer"
+    },
+    "stop-idx": {
+      "description": "Final volume in functional timeseries that should be considered for preprocessing",
+      "optional": true,
+      "type": "integer"
+    },
+    "task-id": {
+      "description": "[TASK_ID [TASK_ID ...]] filter input dataset by task id",
+      "optional": true,
+      "type": "string"
+    },
+    "verbose": {
+      "default": "v",
+      "description": "increases mriqc log verbosity for each occurence, debug level is -vvv",
+      "enum": [
+        "",
+        "v",
+        "vv",
+        "vvv"
+      ],
+      "type": "string"
+    },
+    "verbose-reports": {
+      "default": true,
+      "description": "increase verbosity of report",
+      "type": "boolean"
+    },
+    "webapi-port": {
+      "description": "port where the MRIQC WebAPI is listening",
+      "optional": true,
+      "type": "string"
+    },
+    "webapi-url": {
+      "description": "IP address where the MRIQC WebAPI is listening",
+      "optional": true,
+      "type": "string"
+    },
+    "write-graph": {
+      "default": false,
+      "description": "Write workflow graph",
+      "type": "boolean"
+    }
+  },
+  "environment": {
+    "AFNI_IMSAVE_WARNINGS": "NO",
+    "AFNI_MODELPATH": "/opt/afni/models",
+    "AFNI_PLUGINPATH": "/opt/afni/plugins",
+    "AFNI_TTATLAS_DATASET": "/opt/afni/atlases",
+    "ANTSPATH": "/usr/lib/ants",
+    "CPATH": "/usr/local/miniconda/include/:",
+    "FSLDIR": "/usr/share/fsl/5.0",
+    "FSLMULTIFILEQUIT": "TRUE",
+    "FSLOUTPUTTYPE": "NIFTI_GZ",
+    "FSLTCLSH": "/usr/bin/tclsh",
+    "FSLWISH": "/usr/bin/wish",
+    "HOME": "/home/bidsapp",
+    "LANG": "C.UTF-8",
+    "LC_ALL": "C.UTF-8",
+    "LD_LIBRARY_PATH": "/usr/lib/fsl/5.0:",
+    "MKL_NUM_THREADS": "1",
+    "OMP_NUM_THREADS": "1",
+    "PATH": "/usr/local/miniconda/bin:/opt/afni:/usr/lib/ants:/usr/lib/fsl/5.0:/usr/lib/afni/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin",
+    "POSSUMDIR": "/usr/share/fsl/5.0",
+    "PYTHONNOUSERSITE": "1",
+    "TEMPLATEFLOW_HOME": "/opt/templateflow"
+  },
+  "author": "Poldrack Lab, Stanford University",
+  "maintainer": "Flywheel <support@flywheel.io>",
+  "cite": "Esteban O, Birman D, Schaer M, Koyejo OO, Poldrack RA, Gorgolewski KJ; MRIQC: Advancing the Automatic Prediction of Image Quality in MRI from Unseen Sites; PLOS ONE 12(9):e0184661; doi:10.1371/journal.pone.0184661.",
+  "license": "BSD-3-Clause",
+  "source": "https://github.com/flywheel-apps/bids-mriqc",
+  "url": "https://mriqc.readthedocs.io/en/stable/about.html"
 }
