--- a/manifest.json
+++ b/manifest.json
@@ -2,12 +2,12 @@
   "name": "bids-mriqc",
   "label": "MRIQC: Automatic prediction of quality and visual reporting of MRI scans in BIDS format",
   "description": "MRIQC (v0.15.1) extracts no-reference IQMs (image quality metrics) from structural (T1w and T2w) and functional MRI (magnetic resonance imaging) data.",
-  "version": "1.0.5_0.15.1",
+  "version": "1.0.6_0.15.1",
   "custom": {
-    "docker-image": "flywheel/bids-mriqc:1.0.5_0.15.1",
+    "docker-image": "flywheel/bids-mriqc:1.0.6_0.15.1",
     "gear-builder": {
       "category": "analysis",
-      "image": "flywheel/bids-mriqc:1.0.5_0.15.1"
+      "image": "flywheel/bids-mriqc:1.0.6_0.15.1"
     },
     "flywheel": {
       "suite": "BIDS Apps"
@@ -145,6 +145,11 @@
     "gear-dry-run": {
       "default": false,
       "description": "Do everything except actually executing the command line",
+      "type": "boolean"
+    },
+    "gear-keep-output": {
+      "default": false,
+      "description": "Don't delete output.  Output is always zipped into a single file for easy download.  Choose this option to prevent output deletion after zipping.",
       "type": "boolean"
     },
     "hmc-afni": {
