--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "bids-mriqc",
   "label": "BIDS MRIQC: Automatic prediction of quality and visual reporting of MRI scans in BIDS format",
-  "description": "MRIQC (0.15.2 - April 6, 2020)) extracts no-reference IQMs (image quality metrics) from structural (T1w and T2w) and functional MRI (magnetic resonance imaging) data.  Arguments such as --n_procs --mem_gb and --ants-nthreads are set to use the maximum available as detected by MRIQC.",
+  "description": "MRIQC (0.15.2 - April 6, 2020) extracts no-reference image quality metrics (IQMs) from T1w and T2w structural and functional magnetic resonance imaging data.  Note: arguments --n_procs --mem_gb and --ants-nthreads are not availble to configure becaues they are set to use the maximum available as detected by MRIQC.",
   "version": "1.1.0_0.15.2",
   "custom": {
     "docker-image": "flywheel/bids-mriqc:1.1.0_0.15.2",
