--- a/manifest.json
+++ b/manifest.json
@@ -2,12 +2,12 @@
     "name": "bids-mriqc",
     "label": "BIDS MRIQC: Automatic prediction of quality and visual reporting of MRI scans in BIDS format",
     "description": "(HPC Compatible) MRIQC (22.0.6 - Aug 24, 2022) extracts no-reference image quality metrics (IQMs) from T1w and T2w structural and functional magnetic resonance imaging data.  Note: arguments --n_procs --mem_gb and --ants-nthreads are not availble to configure becaues they are set to use the maximum available as detected by MRIQC.",
-    "version": "1.2.4_22.0.6_inc1.1rc1",
+    "version": "1.2.4_22.0.6_inc1.2",
     "custom": {
-        "docker-image": "amhe4269/bids-mriqc:1.2.4_22.0.6_inc1.1rc1",
+        "docker-image": "amhe4269/bids-mriqc:1.2.4_22.0.6_inc1.2",
         "gear-builder": {
             "category": "analysis",
-            "image": "amhe4269/bids-mriqc:1.2.4_22.0.6_inc1.1rc1"
+            "image": "amhe4269/bids-mriqc:1.2.4_22.0.6_inc1.2"
         },
         "flywheel": {
             "suite": "QA"
