--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,24 @@
-attrs==22.1.0 ; python_version >= "3.8" and python_version < "4.0"
-backports-zoneinfo==0.2.1 ; python_version >= "3.8" and python_version < "3.9"
-certifi==2022.6.15 ; python_version >= "3.8" and python_version < "4.0"
-charset-normalizer==2.1.1 ; python_version >= "3.8" and python_version < "4"
-dotty-dict==1.3.1 ; python_version >= "3.8" and python_version < "4.0"
-flywheel-gear-toolkit==0.6.6 ; python_version >= "3.8" and python_version < "4.0"
-flywheel-gears==0.2.1 ; python_version >= "3.8" and python_version < "4.0"
-flywheel-sdk==16.10.11 ; python_version >= "3.8" and python_version < "4.0"
-fw-meta==2.0.8 ; python_version >= "3.8" and python_version < "4.0"
-fw-utils==4.0.0 ; python_version >= "3.8" and python_version < "4.0"
-idna==3.3 ; python_version >= "3.8" and python_version < "4"
-jsonschema==3.2.0 ; python_version >= "3.8" and python_version < "4.0"
-pathvalidate==2.5.2 ; python_version >= "3.8" and python_version < "4.0"
-pydantic==1.10.2 ; python_version >= "3.8" and python_version < "4.0"
-pyrsistent==0.18.1 ; python_version >= "3.8" and python_version < "4.0"
-python-dateutil==2.8.2 ; python_version >= "3.8" and python_version < "4.0"
-pytz-deprecation-shim==0.1.0.post0 ; python_version >= "3.8" and python_version < "4.0"
-requests-toolbelt==0.9.1 ; python_version >= "3.8" and python_version < "4.0"
-requests==2.28.1 ; python_version >= "3.8" and python_version < "4"
-rfc3987==1.3.8 ; python_version >= "3.8" and python_version < "4.0"
-six==1.16.0 ; python_version >= "3.8" and python_version < "4.0"
-typing-extensions==4.3.0 ; python_version >= "3.8" and python_version < "4.0"
-tzdata==2022.2 ; python_version >= "3.8" and python_version < "4.0"
-tzlocal==4.2 ; python_version >= "3.8" and python_version < "4.0"
-urllib3==1.26.12 ; python_version >= "3.8" and python_version < "4"
+attrs==23.1.0 ; python_version >= "3.9" and python_version < "4.0"
+certifi==2023.7.22 ; python_version >= "3.9" and python_version < "4.0"
+charset-normalizer==3.2.0 ; python_version >= "3.9" and python_version < "4.0"
+dotty-dict==1.3.1 ; python_version >= "3.9" and python_version < "4.0"
+flywheel-bids @ git+https://gitlab.com/flywheel-io/public/bids-client.git@dev-GEAR-3018-add-bidsApp ; python_version >= "3.9" and python_version < "4.0"
+flywheel-gear-toolkit==0.6.13 ; python_version >= "3.9" and python_version < "4.0"
+flywheel-gears==0.3.0 ; python_version >= "3.9" and python_version < "4.0"
+flywheel-sdk==16.19.2 ; python_version >= "3.9" and python_version < "4.0"
+future==0.18.3 ; python_version >= "3.9" and python_version < "4.0"
+idna==3.4 ; python_version >= "3.9" and python_version < "4.0"
+importlib-resources==5.13.0 ; python_version >= "3.9" and python_version < "4.0"
+jsonschema==3.2.0 ; python_version >= "3.9" and python_version < "4.0"
+packaging==23.1 ; python_version >= "3.9" and python_version < "4.0"
+psutil==5.9.5 ; python_version >= "3.9" and python_version < "4.0"
+pyrsistent==0.19.3 ; python_version >= "3.9" and python_version < "4.0"
+python-dateutil==2.8.2 ; python_version >= "3.9" and python_version < "4.0"
+requests-toolbelt==1.0.0 ; python_version >= "3.9" and python_version < "4.0"
+requests==2.31.0 ; python_version >= "3.9" and python_version < "4.0"
+rfc3987==1.3.8 ; python_version >= "3.9" and python_version < "4.0"
+rtstatlib==1.0.0 ; python_version >= "3.9" and python_version < "4.0"
+setuptools==68.2.2 ; python_version >= "3.9" and python_version < "4.0"
+six==1.16.0 ; python_version >= "3.9" and python_version < "4.0"
+urllib3==2.0.5 ; python_version >= "3.9" and python_version < "4.0"
+zipp==3.17.0 ; python_version >= "3.9" and python_version < "3.10"
