--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-  "author": "Flywheel",
-  "cite": "",
-  "command": "python run.py",
+  "author": "Poldrack Lab, Stanford University",
+  "cite": "Esteban O, Birman D, Schaer M, Koyejo OO, Poldrack RA, Gorgolewski KJ; MRIQC: Advancing the Automatic Prediction of Image Quality in MRI from Unseen Sites; PLOS ONE 12(9):e0184661; doi:10.1371/journal.pone.0184661.",
+  "command": "/opt/flypy/bin/python run.py",
   "config": {
     "bids_app_command": {
       "default": "",
-      "description": "The command as supplied to the BIDS app e.g., qsiprep bids_dir output_dir participant [arg1 [arg2 ...]]",
+      "description": "OPTIONAL. The gear will run the algorithm defaults, if no command is supplied. For usage, see https://mriqc.readthedocs.io/en/latest/running.html#command-line-interface. Example command: mriqc bids_dir output_dir participant [arg1 [arg2 ...]]",
       "type": "string"
     },
     "debug": {
@@ -15,87 +15,96 @@
     },
     "gear-dry-run": {
       "default": false,
-      "description": "Do everything except actually execute BIDS App command",
+      "description": "Do everything Flywheel-related except actually execute BIDS App command. Different from passing '--dry-run' in the BIDS App command.",
       "type": "boolean"
     },
-    "gear-intermediate-files": {
-      "default": "",
-      "description": "Space separated list of FILES to retain from the intermediate work directory.",
-      "type": "string"
-    },
-    "gear-intermediate-folders": {
-      "default": "",
-      "description": "Space separated list of FOLDERS to retain from the intermediate work directory.",
-      "type": "string"
-    },
-    "gear-keep-output": {
+    "gear-post-processing-only": {
       "default": false,
-      "description": "Don't delete output.  Output is always zipped into a single file for easy download.  Choose this option to prevent output deletion after zipping.",
+      "description": "REQUIRES archive file. Gear will skip the BIDS algorithm and go straight to generating the HTML reports and processing metadata.",
       "type": "boolean"
     },
-    "gear-save-intermediate-output": {
+    "no-sub": {
+      "description": "Turn off submission of anonymized quality metrics to MRIQC’s metrics repository",
       "default": false,
-      "description": "Gear will save ALL intermediate output into {{bids_app_binary}}_work.zip",
       "type": "boolean"
-    },
-    "mem_mb": {
-      "description": "Maximum memory to use (MB). Leave blank or set to 0 to use the maximum available in the system.",
-      "optional": true,
-      "type": "integer"
-    },
-    "n_cpus": {
-      "description": "Number of CPUs/cores to use. Leave blank or set to 0 to use the maximum available in the system.",
-      "optional": true,
-      "type": "integer"
     }
   },
   "custom": {
     "analysis-level": "participant",
-    "bids-app-binary": "bids-validator",
+    "bids-app-binary": "mriqc",
     "bids-app-modalities": [
       "anat",
       "func",
       "dwi",
-      "perf",
-      "fmap"
+      "perf"
     ],
     "flywheel": {
       "suite": "BIDS Apps"
     },
     "gear-builder": {
       "category": "analysis",
-      "image": "flywheel/bids-app-template:0.1.0"
+      "image": "flywheel/bids-mriqc:2.0.0_23.1.0"
     },
     "license": {
-      "dependencies": [
-        {
-          "name": "Other",
-          "url": "REPLACE: url of the packages the BIDS app uses"
+          "main": {
+            "name": "MIT"
+          },
+          "dependencies": [
+            {
+              "name": "Other",
+              "url": "https://fsl.fmrib.ox.ac.uk/fsl/fslwiki/Licence"
+            },
+            {
+              "name": "Other",
+              "url": "https://github.com/ANTsX/ANTs/blob/v2.3.4/COPYING.txt"
+            },
+            {
+              "name": "Other",
+              "url": "https://surfer.nmr.mgh.harvard.edu/fswiki/License"
+            }
+          ],
+        "non-commercial-use-only": true
         }
-      ],
-      "main": {
-        "name": "BSD-3-Clause",
-        "url": "BIDS App URL"
-      },
-      "non-commercial-use-only": false
-    }
   },
-  "description": "REPLACE: Use this template to build Flywheel gears that wrap official BIDS App algorithms. Replace the name of the binary, description, licenses, and any other fields. Limit adding to the config fields as much as possible to leverage the methods in the flywheel_bids_app_toolkit and this template."
+  "description": "MRIQC (23.1.0) extracts no-reference image quality metrics (IQMs) from T1w and T2w structural and functional magnetic resonance imaging data.  For more commandline options, please visit https://mriqc.readthedocs.io/en/latest/running.html. LICENSING NOTE: FSL software are owned by Oxford University Innovation and license is required for any commercial applications. For commercial licence please contact fsl@innovation.ox.ac.uk. For academic use, an academic license is required which is available by registering on the FSL website. Any use of the software requires that the user obtain the appropriate license. See https://fsl.fmrib.ox.ac.uk/fsldownloads_registration for more information.",
   "environment": {
-      "FLYWHEEL": "/flywheel/v0"
+    "PATH":"/opt/conda/bin:/opt/ants:/opt/afni:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin",
+    "LANG":"en_US.UTF-8",
+    "LC_ALL":"en_US.UTF-8",
+    "CONDA_PATH":"/opt/conda",
+    "CPATH":"/opt/conda/include:",
+    "PYTHONNOUSERSITE":"1",
+    "LD_LIBRARY_PATH":"/usr/lib/x86_64-linux-gnu:/opt/conda/lib",
+    "AFNI_DIR":"/opt/afni",
+    "AFNI_IMSAVE_WARNINGS":"NO",
+    "AFNI_MODELPATH":"/opt/afni/models",
+    "AFNI_TTATLAS_DATASET":"/opt/afni/atlases",
+    "AFNI_PLUGINPATH":"/opt/afni/plugins",
+    "ANTSPATH":"/opt/ants",
+    "FREESURFER_HOME": "/opt/freesurfer",
+    "MKL_NUM_THREADS":"1",
+    "OMP_NUM_THREADS":"1",
+    "IS_DOCKER_8395080871":"1",
+    "HOME":"/home/mriqc",
+    "FLYWHEEL":"/flywheel/v0",
+    "PYTHONUNBUFFERED": "1"
   },
   "inputs": {
     "archived_runs": {
       "base": "file",
       "description": "Zip file with data or analyses from previous runs (e.g., FreeSurfer archive)",
       "optional": true
+    },
+     "api-key": {
+      "base": "api-key",
+      "read-only": true
     }
   },
-  "label": "FW BIDS APP TEMPLATE",
-  "license": "MIT",
+  "label": "BIDS MRIQC: Automatic prediction of quality and visual reporting of MRI scans in BIDS format",
+  "license": "Other",
   "maintainer": "Flywheel <support@flywheel.io>",
-  "name": "BIDS App Template",
-  "source": "https://gitlab.com/flywheel-io/flywheel-apps/templates/bids-app-template",
-  "url": "https://gitlab.com/flywheel-io/flywheel-apps/templates/bids-app-template",
-  "version": "0.1.0"
+  "name": "bids-mriqc",
+  "source": "https://github.com/nipreps/mriqc/tree/master",
+  "url": "https://gitlab.com/flywheel-io/scientific-solutions/gears/bids-apps/bids-mriqc",
+  "version": "2.0.0_23.1.0"
 }
