--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,11 +1,95 @@
+anyio==4.2.0 ; python_version >= "3.9" and python_version < "4.0"
+appnope==0.1.3 ; python_version >= "3.9" and python_version < "4.0" and platform_system == "Darwin"
+argon2-cffi-bindings==21.2.0 ; python_version >= "3.9" and python_version < "4.0"
+argon2-cffi==23.1.0 ; python_version >= "3.9" and python_version < "4.0"
+arrow==1.3.0 ; python_version >= "3.9" and python_version < "4.0"
+asttokens==2.4.1 ; python_version >= "3.9" and python_version < "4.0"
+async-lru==2.0.4 ; python_version >= "3.9" and python_version < "4.0"
 atomicwrites==1.4.1 ; python_version >= "3.9" and python_version < "4.0" and sys_platform == "win32"
+babel==2.14.0 ; python_version >= "3.9" and python_version < "4.0"
+bleach==6.1.0 ; python_version >= "3.9" and python_version < "4.0"
+cffi==1.16.0 ; python_version >= "3.9" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.9" and python_version < "4.0" and sys_platform == "win32"
-coverage[toml]==7.3.1 ; python_version >= "3.9" and python_version < "4.0"
+comm==0.2.1 ; python_version >= "3.9" and python_version < "4.0"
+coverage[toml]==7.4.0 ; python_version >= "3.9" and python_version < "4.0"
+debugpy==1.8.0 ; python_version >= "3.9" and python_version < "4.0"
+decorator==5.1.1 ; python_version >= "3.9" and python_version < "4.0"
+defusedxml==0.7.1 ; python_version >= "3.9" and python_version < "4.0"
+exceptiongroup==1.2.0 ; python_version >= "3.9" and python_version < "3.11"
+executing==2.0.1 ; python_version >= "3.9" and python_version < "4.0"
+fastjsonschema==2.19.1 ; python_version >= "3.9" and python_version < "4.0"
+fqdn==1.5.1 ; python_version >= "3.9" and python_version < "4"
+importlib-metadata==7.0.1 ; python_version >= "3.9" and python_version < "3.10"
 iniconfig==2.0.0 ; python_version >= "3.9" and python_version < "4.0"
+ipykernel==6.28.0 ; python_version >= "3.9" and python_version < "4.0"
+ipython==8.18.1 ; python_version >= "3.9" and python_version < "4.0"
+ipywidgets==8.1.1 ; python_version >= "3.9" and python_version < "4.0"
+isoduration==20.11.0 ; python_version >= "3.9" and python_version < "4.0"
+jedi==0.19.1 ; python_version >= "3.9" and python_version < "4.0"
+jinja2==3.1.3 ; python_version >= "3.9" and python_version < "4.0"
+json5==0.9.14 ; python_version >= "3.9" and python_version < "4.0"
+jsonpointer==2.4 ; python_version >= "3.9" and python_version < "4.0"
+jsonschema[format-nongpl]==4.20.0 ; python_version >= "3.9" and python_version < "4.0"
+jupyter-client==8.6.0 ; python_version >= "3.9" and python_version < "4.0"
+jupyter-console==6.6.3 ; python_version >= "3.9" and python_version < "4.0"
+jupyter-core==5.7.1 ; python_version >= "3.9" and python_version < "4.0"
+jupyter-events==0.9.0 ; python_version >= "3.9" and python_version < "4.0"
+jupyter-lsp==2.2.1 ; python_version >= "3.9" and python_version < "4.0"
+jupyter-server-terminals==0.5.1 ; python_version >= "3.9" and python_version < "4.0"
+jupyter-server==2.12.4 ; python_version >= "3.9" and python_version < "4.0"
+jupyter==1.0.0 ; python_version >= "3.9" and python_version < "4.0"
+jupyterlab-pygments==0.3.0 ; python_version >= "3.9" and python_version < "4.0"
+jupyterlab-server==2.25.2 ; python_version >= "3.9" and python_version < "4.0"
+jupyterlab-widgets==3.0.9 ; python_version >= "3.9" and python_version < "4.0"
+jupyterlab==4.0.10 ; python_version >= "3.9" and python_version < "4.0"
+markupsafe==2.1.3 ; python_version >= "3.9" and python_version < "4.0"
+matplotlib-inline==0.1.6 ; python_version >= "3.9" and python_version < "4.0"
+mistune==3.0.2 ; python_version >= "3.9" and python_version < "4.0"
+nbclient==0.9.0 ; python_version >= "3.9" and python_version < "4.0"
+nbconvert==7.14.1 ; python_version >= "3.9" and python_version < "4.0"
+nbformat==5.9.2 ; python_version >= "3.9" and python_version < "4.0"
+nest-asyncio==1.5.8 ; python_version >= "3.9" and python_version < "4.0"
+notebook-shim==0.2.3 ; python_version >= "3.9" and python_version < "4.0"
+notebook==7.0.6 ; python_version >= "3.9" and python_version < "4.0"
+overrides==7.4.0 ; python_version >= "3.9" and python_version < "4.0"
+pandocfilters==1.5.0 ; python_version >= "3.9" and python_version < "4.0"
+parso==0.8.3 ; python_version >= "3.9" and python_version < "4.0"
+pexpect==4.9.0 ; python_version >= "3.9" and python_version < "4.0" and sys_platform != "win32"
+platformdirs==4.1.0 ; python_version >= "3.9" and python_version < "4.0"
 pluggy==1.3.0 ; python_version >= "3.9" and python_version < "4.0"
+prometheus-client==0.19.0 ; python_version >= "3.9" and python_version < "4.0"
+prompt-toolkit==3.0.43 ; python_version >= "3.9" and python_version < "4.0"
+ptyprocess==0.7.0 ; python_version >= "3.9" and python_version < "4.0" and (sys_platform != "win32" or os_name != "nt")
+pure-eval==0.2.2 ; python_version >= "3.9" and python_version < "4.0"
 py==1.11.0 ; python_version >= "3.9" and python_version < "4.0"
+pycparser==2.21 ; python_version >= "3.9" and python_version < "4.0"
+pygments==2.17.2 ; python_version >= "3.9" and python_version < "4.0"
 pytest-cov==3.0.0 ; python_version >= "3.9" and python_version < "4.0"
-pytest-mock==3.11.1 ; python_version >= "3.9" and python_version < "4.0"
+pytest-mock==3.12.0 ; python_version >= "3.9" and python_version < "4.0"
 pytest==6.2.5 ; python_version >= "3.9" and python_version < "4.0"
+python-json-logger==2.0.7 ; python_version >= "3.9" and python_version < "4.0"
+pywin32==306 ; sys_platform == "win32" and platform_python_implementation != "PyPy" and python_version >= "3.9" and python_version < "4.0"
+pywinpty==2.0.12 ; python_version >= "3.9" and python_version < "4.0" and os_name == "nt"
+pyyaml==6.0.1 ; python_version >= "3.9" and python_version < "4.0"
+pyzmq==25.1.2 ; python_version >= "3.9" and python_version < "4.0"
+qtconsole==5.5.1 ; python_version >= "3.9" and python_version < "4.0"
+qtpy==2.4.1 ; python_version >= "3.9" and python_version < "4.0"
+rfc3339-validator==0.1.4 ; python_version >= "3.9" and python_version < "4.0"
+rfc3986-validator==0.1.1 ; python_version >= "3.9" and python_version < "4.0"
+send2trash==1.8.2 ; python_version >= "3.9" and python_version < "4.0"
+sniffio==1.3.0 ; python_version >= "3.9" and python_version < "4.0"
+stack-data==0.6.3 ; python_version >= "3.9" and python_version < "4.0"
+terminado==0.18.0 ; python_version >= "3.9" and python_version < "4.0"
+tinycss2==1.2.1 ; python_version >= "3.9" and python_version < "4.0"
 toml==0.10.2 ; python_version >= "3.9" and python_version < "4.0"
-tomli==2.0.1 ; python_full_version <= "3.11.0a6" and python_version >= "3.9"
+tomli==2.0.1 ; python_version < "3.11" and python_version >= "3.9"
+tornado==6.4 ; python_version >= "3.9" and python_version < "4.0"
+traitlets==5.14.1 ; python_version >= "3.9" and python_version < "4.0"
+types-python-dateutil==2.8.19.20240106 ; python_version >= "3.9" and python_version < "4.0"
+typing-extensions==4.9.0 ; python_version >= "3.9" and python_version < "3.11"
+uri-template==1.3.0 ; python_version >= "3.9" and python_version < "4.0"
+wcwidth==0.2.13 ; python_version >= "3.9" and python_version < "4.0"
+webcolors==1.13 ; python_version >= "3.9" and python_version < "4.0"
+webencodings==0.5.1 ; python_version >= "3.9" and python_version < "4.0"
+websocket-client==1.7.0 ; python_version >= "3.9" and python_version < "4.0"
+widgetsnbextension==4.0.9 ; python_version >= "3.9" and python_version < "4.0"
