--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,12 @@
 include:
   - project: flywheel-io/scientific-solutions/etc/sse-qa-ci
-    ref: 3754b1d9e97e8aee8eb3074e78a5f92dc8220132
-    file: ci/default.yml
+    ref: df5470b6ebe5ddf6448365affcfda06cc0bba92b
+    file: ci/large-default.yml
 
 variables:
   PYVER: "3.9"
   PYTEST_COV_FAIL_UNDER: 70  # Set pytest coverage to 0
-  DEBUG: "3" # Set debug mode to print out executed command on qa-ci
+  APT_INSTALL: "build-essential"
+  DEBUG: ""  # Set debug mode to print out executed command on qa-ci
+  PUBLISH_POETRY: "false"  # Set to true to allow CI to publish package to PYPI
+  CACHE_CLEAR: "1"  # Set to true to clear runner cache on gitlab CI
