--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,12 +1,15 @@
 include:
-  - project: flywheel-io/scientific-solutions/etc/sse-qa-ci
-    ref: df5470b6ebe5ddf6448365affcfda06cc0bba92b
-    file: ci/large-default.yml
+  - project: flywheel-io/tools/etc/qa-ci
+    ref: e5324a0ab1e27f5c579bdf5928b5e5f5ba3961ea
+    file: ci/gear.yml
 
 variables:
   PYVER: "3.9"
   PYTEST_COV_FAIL_UNDER: 70  # Set pytest coverage to 0
-  APT_INSTALL: "build-essential"
   DEBUG: ""  # Set debug mode to print out executed command on qa-ci
   PUBLISH_POETRY: "false"  # Set to true to allow CI to publish package to PYPI
   CACHE_CLEAR: "1"  # Set to true to clear runner cache on gitlab CI
+
+test:gear:
+  # override the extends of test:gear to use a larger runner:
+  extends: [.test:gear, .gitlab-runner-medium]
