--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,12 +1,16 @@
 repos:
   - repo: https://gitlab.com/flywheel-io/tools/etc/qa-ci
-    rev: 3da2396b007bb4ec3a8d27c0a0724209b0a607cf
+    rev: e5324a0ab1e27f5c579bdf5928b5e5f5ba3961ea
     hooks:
-      - id: gearcheck
-        always_run: true
       - id: poetry_export
-      - id: docker_build
+      - id: gearcheck
+      - id: hadolint # Dockerfile linter (recommended)
+      - id: jsonlint
+      - id: linkcheck
+      - id: markdownlint
+      - id: yamllint
       - id: ruff
-        args: ["--config", "pyproject.toml"]
+        args: ["--config", "pyproject.toml", --ignore, "E501"]
       - id: ruff_format
+      - id: ruff_tests
       - id: pytest
