--- a/manifest.json
+++ b/manifest.json
@@ -87,7 +87,7 @@
     },
     "gear-builder": {
       "category": "analysis",
-      "image": "flywheel/bids-mriqc:2.1.1_23.1.0"
+      "image": "flywheel/bids-mriqc:2.1.1_24.0.0"
     },
     "license": {
       "dependencies": [
@@ -110,7 +110,7 @@
       "non-commercial-use-only": true
     }
   },
-  "description": "MRIQC (23.1.0) extracts no-reference image quality metrics (IQMs) from T1w and T2w structural and functional magnetic resonance imaging data.  For more commandline options, please visit https://mriqc.readthedocs.io/en/latest/running.html. LICENSING NOTE: FSL software are owned by Oxford University Innovation and license is required for any commercial applications. For commercial licence please contact fsl@innovation.ox.ac.uk. For academic use, an academic license is required which is available by registering on the FSL website. Any use of the software requires that the user obtain the appropriate license. See https://fsl.fmrib.ox.ac.uk/fsldownloads_registration for more information.",
+  "description": "MRIQC (23.1.0) extracts no-reference image quality metrics (IQMs) from T1w and T2w structural and functional magnetic resonance imaging data.  For more commandline options, please visit https://mriqc.readthedocs.io/en/latest/running.html. LICENSING NOTE: FSL software are owned by Oxford University Innovation and license is required for any commercial applications. For commercial licence please contact fsl@innovation.ox.ac.uk. For academic use, an academic license is required which is available by registering on the FSL website. Any use of the software requires that the user obtain the appropriate license. See https://fsl.fmrib.ox.ac.uk/fsl/docs/#/license for more information.",
   "environment": {
     "AFNI_DIR": "/opt/afni",
     "AFNI_IMSAVE_WARNINGS": "NO",
@@ -151,5 +151,5 @@
   "name": "bids-mriqc",
   "source": "https://github.com/nipreps/mriqc/tree/master",
   "url": "https://gitlab.com/flywheel-io/scientific-solutions/gears/bids-apps/bids-mriqc",
-  "version": "2.1.1_23.1.0"
+  "version": "2.1.1_24.0.0"
 }
