--- a/manifest.json
+++ b/manifest.json
@@ -87,7 +87,7 @@
     },
     "gear-builder": {
       "category": "analysis",
-      "image": "flywheel/bids-mriqc:2.1.2_24.0.0"
+      "image": "bids-mriqc:2.1.2_24.0.2"
     },
     "license": {
       "dependencies": [
@@ -126,13 +126,17 @@
     "IS_DOCKER_8395080871": "1",
     "LANG": "en_US.UTF-8",
     "LC_ALL": "en_US.UTF-8",
-    "LD_LIBRARY_PATH": "/usr/lib/x86_64-linux-gnu:/opt/conda/lib",
+    "LD_LIBRARY_PATH": "/opt/conda/lib:/usr/lib/x86_64-linux-gnu:/lib",
     "MKL_NUM_THREADS": "1",
     "OMP_NUM_THREADS": "1",
-    "PATH": "/opt/ants:/opt/afni:/opt/conda/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin",
+    "PATH": "/opt/conda/bin:/opt/afni:/opt/conda/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin",
     "PWD": "/flywheel/v0",
     "PYTHONNOUSERSITE": "1",
-    "PYTHONUNBUFFERED": "1"
+    "PYTHONUNBUFFERED": "1",
+    "TEMPLATEFLOW_HOME": "/templateflow",
+    "UV_USE_IO_URING": "0",
+    "NUMEXPR_MAX_THREADS": "1",
+    "MAMBA_ROOT_PREFIX": "/opt/conda"
   },
   "inputs": {
     "api-key": {
@@ -151,5 +155,5 @@
   "name": "bids-mriqc",
   "source": "https://github.com/nipreps/mriqc/tree/master",
   "url": "https://gitlab.com/flywheel-io/scientific-solutions/gears/bids-apps/bids-mriqc",
-  "version": "2.1.2_24.0.0"
+  "version": "2.1.2_24.0.2"
 }
