--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,19 @@
 attrs==24.2.0 ; python_version >= "3.9" and python_version < "4.0"
 beautifulsoup4==4.12.3 ; python_version >= "3.9" and python_version < "4.0"
-certifi==2024.7.4 ; python_version >= "3.9" and python_version < "4.0"
-cffi==1.17.0 ; python_version >= "3.9" and python_version < "4.0" and implementation_name == "pypy"
+certifi==2024.8.30 ; python_version >= "3.9" and python_version < "4.0"
 charset-normalizer==3.3.2 ; python_version >= "3.9" and python_version < "4.0"
 dotty-dict==1.3.1 ; python_version >= "3.9" and python_version < "4.0"
-flywheel-bids==1.2.17 ; python_version >= "3.9" and python_version < "4.0"
+flywheel-bids @ git+https://gitlab.com/flywheel-io/public/bids-client.git@8a02769b70294728803dd3ecb6314054e22931c5 ; python_version >= "3.9" and python_version < "4.0"
 flywheel-gear-toolkit==0.6.18 ; python_version >= "3.9" and python_version < "4.0"
 flywheel-gears==0.3.1 ; python_version >= "3.9" and python_version < "4.0"
 flywheel-sdk==16.19.2 ; python_version >= "3.9" and python_full_version < "3.10.0"
-flywheel-sdk==18.5.0 ; python_full_version >= "3.10.0" and python_version < "4.0"
-future==0.18.3 ; python_version >= "3.9" and python_version < "4.0"
-idna==3.7 ; python_version >= "3.9" and python_version < "4.0"
-importlib-resources==6.4.0 ; python_version >= "3.9" and python_version < "4.0"
+flywheel-sdk==19.1.0 ; python_full_version >= "3.10.0" and python_version < "4.0"
+idna==3.8 ; python_version >= "3.9" and python_version < "4.0"
+importlib-resources==6.4.5 ; python_version >= "3.9" and python_version < "4.0"
 jsonschema-specifications==2023.12.1 ; python_version >= "3.9" and python_version < "4.0"
 jsonschema==4.23.0 ; python_version >= "3.9" and python_version < "4.0"
 packaging==24.1 ; python_version >= "3.9" and python_version < "4.0"
-pycparser==2.22 ; python_version >= "3.9" and python_version < "4.0" and implementation_name == "pypy"
 python-dateutil==2.9.0.post0 ; python_version >= "3.9" and python_version < "4.0"
-pyzmq==25.1.2 ; python_version >= "3.9" and python_version < "4.0"
 referencing==0.35.1 ; python_version >= "3.9" and python_version < "4.0"
 requests-toolbelt==1.0.0 ; python_version >= "3.9" and python_version < "4.0"
 requests==2.32.3 ; python_version >= "3.9" and python_version < "4.0"
@@ -25,6 +21,6 @@ rfc3987==1.3.8 ; python_version >= "3.9" and python_version < "4.0"
 rpds-py==0.20.0 ; python_version >= "3.9" and python_version < "4.0"
 rtstatlib==1.0.0 ; python_version >= "3.9" and python_version < "4.0"
 six==1.16.0 ; python_version >= "3.9" and python_version < "4.0"
-soupsieve==2.5 ; python_version >= "3.9" and python_version < "4.0"
-urllib3==2.2.2 ; python_version >= "3.9" and python_version < "4.0"
-zipp==3.19.2 ; python_version >= "3.9" and python_version < "3.10"
+soupsieve==2.6 ; python_version >= "3.9" and python_version < "4.0"
+urllib3==2.2.3 ; python_version >= "3.9" and python_version < "4.0"
+zipp==3.20.2 ; python_version >= "3.9" and python_version < "3.10"
