--- a/manifest.json
+++ b/manifest.json
@@ -87,7 +87,7 @@
     },
     "gear-builder": {
       "category": "analysis",
-      "image": "bids-mriqc:2.1.2_24.0.2"
+      "image": "flywheel/bids-mriqc:2.1.3_24.0.2"
     },
     "license": {
       "dependencies": [
@@ -127,7 +127,6 @@
     "LANG": "en_US.UTF-8",
     "LC_ALL": "en_US.UTF-8",
     "LD_LIBRARY_PATH": "/opt/conda/lib:/usr/lib/x86_64-linux-gnu:/lib",
-    "MAMBA_ROOT_PREFIX": "/opt/conda",
     "MKL_NUM_THREADS": "1",
     "NUMEXPR_MAX_THREADS": "1",
     "OMP_NUM_THREADS": "1",
@@ -136,7 +135,8 @@
     "PYTHONNOUSERSITE": "1",
     "PYTHONUNBUFFERED": "1",
     "TEMPLATEFLOW_HOME": "/templateflow",
-    "UV_USE_IO_URING": "0"
+    "UV_USE_IO_URING": "0",
+    "MAMBA_ROOT_PREFIX": "/opt/conda"
   },
   "inputs": {
     "api-key": {
@@ -155,5 +155,5 @@
   "name": "bids-mriqc",
   "source": "https://github.com/nipreps/mriqc/tree/master",
   "url": "https://gitlab.com/flywheel-io/scientific-solutions/gears/bids-apps/bids-mriqc",
-  "version": "2.1.2_24.0.2"
+  "version": "2.1.3_24.0.2"
 }
