--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,4 +1,4 @@
-anyio==4.4.0 ; python_version >= "3.9" and python_version < "4.0"
+anyio==4.6.2.post1 ; python_version >= "3.9" and python_version < "4.0"
 appnope==0.1.4 ; python_version >= "3.9" and python_version < "4.0" and platform_system == "Darwin"
 argon2-cffi-bindings==21.2.0 ; python_version >= "3.9" and python_version < "4.0"
 argon2-cffi==23.1.0 ; python_version >= "3.9" and python_version < "4.0"
@@ -10,8 +10,8 @@ bleach==6.1.0 ; python_version >= "3.9" and python_version < "4.0"
 cffi==1.17.1 ; python_version >= "3.9" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.9" and python_version < "4.0" and sys_platform == "win32"
 comm==0.2.2 ; python_version >= "3.9" and python_version < "4.0"
-coverage[toml]==7.6.1 ; python_version >= "3.9" and python_version < "4.0"
-debugpy==1.8.5 ; python_version >= "3.9" and python_version < "4.0"
+coverage[toml]==7.6.3 ; python_version >= "3.9" and python_version < "4.0"
+debugpy==1.8.7 ; python_version >= "3.9" and python_version < "4.0"
 decorator==5.1.1 ; python_version >= "3.9" and python_version < "4.0"
 defusedxml==0.7.1 ; python_version >= "3.9" and python_version < "4.0"
 exceptiongroup==1.2.2 ; python_version >= "3.9" and python_version < "3.11"
@@ -19,7 +19,7 @@ executing==2.1.0 ; python_version >= "3.9" and python_version < "4.0"
 fastjsonschema==2.20.0 ; python_version >= "3.9" and python_version < "4.0"
 fqdn==1.5.1 ; python_version >= "3.9" and python_version < "4"
 h11==0.14.0 ; python_version >= "3.9" and python_version < "4.0"
-httpcore==1.0.5 ; python_version >= "3.9" and python_version < "4.0"
+httpcore==1.0.6 ; python_version >= "3.9" and python_version < "4.0"
 httpx==0.27.2 ; python_version >= "3.9" and python_version < "4.0"
 importlib-metadata==8.5.0 ; python_version >= "3.9" and python_version < "4.0"
 iniconfig==2.0.0 ; python_version >= "3.9" and python_version < "4.0"
@@ -32,7 +32,7 @@ jinja2==3.1.4 ; python_version >= "3.9" and python_version < "4.0"
 json5==0.9.25 ; python_version >= "3.9" and python_version < "4.0"
 jsonpointer==3.0.0 ; python_version >= "3.9" and python_version < "4.0"
 jsonschema[format-nongpl]==4.23.0 ; python_version >= "3.9" and python_version < "4.0"
-jupyter-client==8.6.2 ; python_version >= "3.9" and python_version < "4.0"
+jupyter-client==8.6.3 ; python_version >= "3.9" and python_version < "4.0"
 jupyter-console==6.6.3 ; python_version >= "3.9" and python_version < "4.0"
 jupyter-core==5.7.2 ; python_version >= "3.9" and python_version < "4.0"
 jupyter-events==0.10.0 ; python_version >= "3.9" and python_version < "4.0"
@@ -44,7 +44,7 @@ jupyterlab-pygments==0.3.0 ; python_version >= "3.9" and python_version < "4.0"
 jupyterlab-server==2.27.3 ; python_version >= "3.9" and python_version < "4.0"
 jupyterlab-widgets==3.0.13 ; python_version >= "3.9" and python_version < "4.0"
 jupyterlab==4.2.5 ; python_version >= "3.9" and python_version < "4.0"
-markupsafe==2.1.5 ; python_version >= "3.9" and python_version < "4.0"
+markupsafe==3.0.1 ; python_version >= "3.9" and python_version < "4.0"
 matplotlib-inline==0.1.7 ; python_version >= "3.9" and python_version < "4.0"
 mistune==3.0.2 ; python_version >= "3.9" and python_version < "4.0"
 more-itertools==10.5.0 ; python_version >= "3.9" and python_version < "4.0"
@@ -59,10 +59,10 @@ overrides==7.7.0 ; python_version >= "3.9" and python_version < "4.0"
 pandocfilters==1.5.1 ; python_version >= "3.9" and python_version < "4.0"
 parso==0.8.4 ; python_version >= "3.9" and python_version < "4.0"
 pexpect==4.9.0 ; python_version >= "3.9" and python_version < "4.0" and sys_platform != "win32"
-platformdirs==4.3.2 ; python_version >= "3.9" and python_version < "4.0"
+platformdirs==4.3.6 ; python_version >= "3.9" and python_version < "4.0"
 pluggy==1.5.0 ; python_version >= "3.9" and python_version < "4.0"
-prometheus-client==0.20.0 ; python_version >= "3.9" and python_version < "4.0"
-prompt-toolkit==3.0.47 ; python_version >= "3.9" and python_version < "4.0"
+prometheus-client==0.21.0 ; python_version >= "3.9" and python_version < "4.0"
+prompt-toolkit==3.0.48 ; python_version >= "3.9" and python_version < "4.0"
 psutil==5.9.8 ; python_version >= "3.9" and python_version < "4.0"
 ptyprocess==0.7.0 ; python_version >= "3.9" and python_version < "4.0" and (sys_platform != "win32" or os_name != "nt")
 pure-eval==0.2.3 ; python_version >= "3.9" and python_version < "4.0"
@@ -72,22 +72,22 @@ pytest-cov==4.1.0 ; python_version >= "3.9" and python_version < "4.0"
 pytest-mock==3.14.0 ; python_version >= "3.9" and python_version < "4.0"
 pytest==7.4.4 ; python_version >= "3.9" and python_version < "4.0"
 python-json-logger==2.0.7 ; python_version >= "3.9" and python_version < "4.0"
-pywin32==306 ; sys_platform == "win32" and platform_python_implementation != "PyPy" and python_version >= "3.9" and python_version < "4.0"
+pywin32==308 ; sys_platform == "win32" and platform_python_implementation != "PyPy" and python_version >= "3.9" and python_version < "4.0"
 pywinpty==2.0.13 ; python_version >= "3.9" and python_version < "4.0" and os_name == "nt"
 pyyaml==6.0.2 ; python_version >= "3.9" and python_version < "4.0"
 pyzmq==26.2.0 ; python_version >= "3.9" and python_version < "4.0"
 rfc3339-validator==0.1.4 ; python_version >= "3.9" and python_version < "4.0"
 rfc3986-validator==0.1.1 ; python_version >= "3.9" and python_version < "4.0"
 send2trash==1.8.3 ; python_version >= "3.9" and python_version < "4.0"
-setuptools==74.1.2 ; python_version >= "3.9" and python_version < "4.0"
+setuptools==75.1.0 ; python_version >= "3.9" and python_version < "4.0"
 sniffio==1.3.1 ; python_version >= "3.9" and python_version < "4.0"
 stack-data==0.6.3 ; python_version >= "3.9" and python_version < "4.0"
 terminado==0.18.1 ; python_version >= "3.9" and python_version < "4.0"
 tinycss2==1.3.0 ; python_version >= "3.9" and python_version < "4.0"
-tomli==2.0.1 ; python_version >= "3.9" and python_version < "4.0"
+tomli==2.0.2 ; python_version >= "3.9" and python_version < "4.0"
 tornado==6.4.1 ; python_version >= "3.9" and python_version < "4.0"
 traitlets==5.14.3 ; python_version >= "3.9" and python_version < "4.0"
-types-python-dateutil==2.9.0.20240906 ; python_version >= "3.9" and python_version < "4.0"
+types-python-dateutil==2.9.0.20241003 ; python_version >= "3.9" and python_version < "4.0"
 typing-extensions==4.12.2 ; python_version >= "3.9" and python_version < "3.11"
 uri-template==1.3.0 ; python_version >= "3.9" and python_version < "4.0"
 wcwidth==0.2.13 ; python_version >= "3.9" and python_version < "4.0"
