--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
 attrs==24.2.0 ; python_version >= "3.9" and python_version < "4.0"
 beautifulsoup4==4.12.3 ; python_version >= "3.9" and python_version < "4.0"
 certifi==2024.8.30 ; python_version >= "3.9" and python_version < "4.0"
-charset-normalizer==3.3.2 ; python_version >= "3.9" and python_version < "4.0"
+charset-normalizer==3.4.0 ; python_version >= "3.9" and python_version < "4.0"
 dotty-dict==1.3.1 ; python_version >= "3.9" and python_version < "4.0"
-flywheel-bids @ git+https://gitlab.com/flywheel-io/public/bids-client.git@8a02769b70294728803dd3ecb6314054e22931c5 ; python_version >= "3.9" and python_version < "4.0"
-flywheel-gear-toolkit==0.6.18 ; python_version >= "3.9" and python_version < "4.0"
+flywheel-bids==1.2.25 ; python_version >= "3.9" and python_version < "4.0"
+flywheel-gear-toolkit==0.6.19 ; python_version >= "3.9" and python_version < "4.0"
 flywheel-gears==0.3.1 ; python_version >= "3.9" and python_version < "4.0"
-flywheel-sdk==16.19.2 ; python_version >= "3.9" and python_full_version < "3.10.0"
-flywheel-sdk==19.1.0 ; python_full_version >= "3.10.0" and python_version < "4.0"
-idna==3.8 ; python_version >= "3.9" and python_version < "4.0"
+flywheel-sdk==19.2.0 ; python_version >= "3.9" and python_version < "4.0"
+fw-gear==0.1.3 ; python_version >= "3.9" and python_version < "4.0"
+idna==3.10 ; python_version >= "3.9" and python_version < "4.0"
 importlib-resources==6.4.5 ; python_version >= "3.9" and python_version < "4.0"
-jsonschema-specifications==2023.12.1 ; python_version >= "3.9" and python_version < "4.0"
+jsonschema-specifications==2024.10.1 ; python_version >= "3.9" and python_version < "4.0"
 jsonschema==4.23.0 ; python_version >= "3.9" and python_version < "4.0"
 packaging==24.1 ; python_version >= "3.9" and python_version < "4.0"
 python-dateutil==2.9.0.post0 ; python_version >= "3.9" and python_version < "4.0"
